crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@190.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table coll_pruning_multi3 partition of coll_pruning_multi for values from ('b', 'a') to ('b', 'e');"
---
CreateStmt@0..106
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..32
    Ident@13..32 "coll_pruning_multi3"
  Whitespace@32..33 " "
  Partition@33..42 "partition"
  Whitespace@42..43 " "
  Of@43..45 "of"
  Whitespace@45..46 " "
  RangeVar@46..64
    Ident@46..64 "coll_pruning_multi"
  Whitespace@64..65 " "
  For@65..68 "for"
  Whitespace@68..69 " "
  Values@69..75 "values"
  Whitespace@75..76 " "
  PartitionBoundSpec@76..104
    From@76..80 "from"
    Whitespace@80..81 " "
    Ascii40@81..82 "("
    AConst@82..85
      Sconst@82..85 "'b'"
    Ascii44@85..86 ","
    Whitespace@86..87 " "
    AConst@87..90
      Sconst@87..90 "'a'"
    Ascii41@90..91 ")"
    Whitespace@91..92 " "
    To@92..94 "to"
    Whitespace@94..95 " "
    Ascii40@95..96 "("
    AConst@96..99
      Sconst@96..99 "'b'"
    Ascii44@99..100 ","
    Whitespace@100..101 " "
    AConst@101..104
      Sconst@101..104 "'e'"
  Ascii41@104..105 ")"
  Ascii59@105..106 ";"

