crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@196.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table like_op_noprune2 partition of like_op_noprune for values in ('BCD');"
---
CreateStmt@0..81
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "like_op_noprune2"
  Whitespace@29..30 " "
  Partition@30..39 "partition"
  Whitespace@39..40 " "
  Of@40..42 "of"
  Whitespace@42..43 " "
  RangeVar@43..58
    Ident@43..58 "like_op_noprune"
  Whitespace@58..59 " "
  For@59..62 "for"
  Whitespace@62..63 " "
  Values@63..69 "values"
  Whitespace@69..70 " "
  PartitionBoundSpec@70..79
    InP@70..72 "in"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..79
      Sconst@74..79 "'BCD'"
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

