crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@199.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table lparted_by_int2_1 partition of lparted_by_int2 for values in (1);
---
CreateStmt@0..78
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "lparted_by_int2_1"
  Whitespace@30..31 " "
  Partition@31..40 "partition"
  Whitespace@40..41 " "
  Of@41..43 "of"
  Whitespace@43..44 " "
  RangeVar@44..59
    Ident@44..59 "lparted_by_int2"
  Whitespace@59..60 " "
  For@60..63 "for"
  Whitespace@63..64 " "
  Values@64..70 "values"
  Whitespace@70..71 " "
  PartitionBoundSpec@71..76
    InP@71..73 "in"
    Whitespace@73..74 " "
    Ascii40@74..75 "("
    AConst@75..76
      Iconst@75..76 "1"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

