crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table lp (a char) partition by list (a);
---
CreateStmt@0..47
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..15
    Ident@13..15 "lp"
  Whitespace@15..16 " "
  Ascii40@16..17 "("
  ColumnDef@17..23
    Ident@17..18 "a"
    Whitespace@18..19 " "
    TypeName@19..23
      AConst@19..23
        CharP@19..23 "char"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  PartitionSpec@25..45
    Partition@25..34 "partition"
    Whitespace@34..35 " "
    By@35..37 "by"
    Whitespace@37..38 " "
    Ident@38..42 "list"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    PartitionElem@44..45
      Ident@44..45 "a"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

