crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@200.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table lparted_by_int2_16384 partition of lparted_by_int2 for values in (16384);
---
CreateStmt@0..86
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..34
    Ident@13..34 "lparted_by_int2_16384"
  Whitespace@34..35 " "
  Partition@35..44 "partition"
  Whitespace@44..45 " "
  Of@45..47 "of"
  Whitespace@47..48 " "
  RangeVar@48..63
    Ident@48..63 "lparted_by_int2"
  Whitespace@63..64 " "
  For@64..67 "for"
  Whitespace@67..68 " "
  Values@68..74 "values"
  Whitespace@74..75 " "
  PartitionBoundSpec@75..84
    InP@75..77 "in"
    Whitespace@77..78 " "
    Ascii40@78..79 "("
    AConst@79..84
      Iconst@79..84 "16384"
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

