crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@206.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rparted_by_int2_maxvalue partition of rparted_by_int2 for values from (16384) to (maxvalue);
---
CreateStmt@0..105
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..37
    Ident@13..37 "rparted_by_int2_maxvalue"
  Whitespace@37..38 " "
  Partition@38..47 "partition"
  Whitespace@47..48 " "
  Of@48..50 "of"
  Whitespace@50..51 " "
  RangeVar@51..66
    Ident@51..66 "rparted_by_int2"
  Whitespace@66..67 " "
  For@67..70 "for"
  Whitespace@70..71 " "
  Values@71..77 "values"
  Whitespace@77..78 " "
  PartitionBoundSpec@78..103
    From@78..82 "from"
    Whitespace@82..83 " "
    Ascii40@83..84 "("
    AConst@84..89
      Iconst@84..89 "16384"
    Ascii41@89..90 ")"
    Whitespace@90..91 " "
    To@91..93 "to"
    Whitespace@93..94 " "
    Ascii40@94..95 "("
    ColumnRef@95..103
      Maxvalue@95..103 "maxvalue"
  Ascii41@103..104 ")"
  Ascii59@104..105 ";"

